# OmniDocBench

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  copier.yml  dvc.yaml  greptile.json  params.yaml  pyproject.toml
.dvc/: config
.github/: release-drafter.yml
.github/workflows/: ci.yml  e2e_results.yml  release.yml  rollback.yml
data/: .gitignore  publicBench_data.dvc
docs/adr/: 0001-use-of-adr.md  0002-repository-structure.md  0003-value-proposition.md
kpis/: comparison_tool.py  metrics.py
kpis/dashboard/: config.py  dashboard.py  utils.py
runs/load_tests/: nanonets_load_test_20251027T145633Z.json  nanonets_load_test_20251027T150039Z.json  nanonets_load_test_20251027T153326Z.json  nanonets_load_test_20251027T153354Z.json  nanonets_load_test_20251027T153500Z.json
scripts/: atomic_execution.py  dvc_data_check.sh  evaluate_kpis.py  manage_data.py  setup-dev.sh  utils.py
skimage/: __init__.py  measure.py
tests/unit/common_fixtures/: common_conftest.py
tests/unit/test_commons/: test_utils.py
tests/unit/test_inference/: test_main.py
tests/unit/test_postprocess/: conftest.py  test_main.py
tests/unit/test_preprocess/: test_main.py
tools/: visualization.py
